--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "description": "Aplicativo para download de vídeos de diversas plataformas",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.8.0",
-    "ws": "^8.13.0"
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^6.11.2",
+    "lru-cache": "^11.1.0",
+    "ws": "^8.18.2"
   },
   "engines": {
     "node": ">=18.x"
